# text-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_chunked_dataset.py  test_data.py  test_preprocessing.py  test_tokenization.py
tests/chunked_data/: cache-1b09e588c8684088_00000_of_00004.arrow  cache-1b09e588c8684088_00001_of_00004.arrow  cache-1b09e588c8684088_00002_of_00004.arrow  cache-1b09e588c8684088_00003_of_00004.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/: duck.md  nested.md  phraser.pkl  wiki.txt
tests/data/Jahresberichte_sample/: UZH_Jahresbericht_2013.md
tests/data/subdata/: wiki.md
text_tools/: constants.py  data.py  preprocesing.py  preprocessing.py
